* chain a separate search with "or_search" to find records matching either one
  
  search("foo").or_search(:conditions => { :priority => 3 })


*0.2.6* (July 6th, 2009)

* search for field conditions in query string, only supported by ClassicQueryParser
  
  search("age:17")

* check if xapian database exists before removing

* search multiple conditions with OR by passing an array

  :conditions => [{ :category_id => 1 }, { :priority => 2 }]


*0.2.5* (June 26th, 2009)

* adding wildcard matching for general search query (ClassicQueryParser only)

* adding wildcard matching when asterisk exists at end of condition

  :conditions => { :name => "foo*" }


*0.2.4* (June 23rd, 2009)

* only create/update record in index if it matches xapit find conditions


*0.2.3* (June 18th, 2009)

* adding compatability with Xapit Sync

* adding create/update/destroy record methods for modifying a single record in index

* allow ranges to be specified in conditions array


*0.2.2* (June 16th, 2009)

* performance improvements

* adding Xapit::Config#close_database method for convenience


*0.2.1* (June 15th, 2009)

* including Xapit::Membership into ActiveRecord when using gem


*0.2.0* (June 12th, 2009)

* sort numeric attributes properly

* adding xapit generator for use with gem install

* adding Xapit.setup/remove_database instead of through Xapit::Config

* adding foundation for adapters to support other ORMs

* facet options which do not narrow down results are ignored

* performance improvements when fetching records and displaying facets

* search conditions can take an array or range of values

  :conditions => { :priority => [2, 5, 7] }
  :conditions => { :priority => 2..7 }

* adding not_condition option in search method

* fixing spelling suggestions when used with stemming


*0.1.0* (May 28th, 2009)

* initial release