@@ -48,4 +48,13 @@ describe Xapit::AbstractQueryParser do
     parser = Xapit::AbstractQueryParser.new(XapitMember, :conditions => { :foo => [2..5, 10] })
     parser.condition_terms.first.xapian_query.description.should == expected.description
   end
+    
+  it "should expand punctuated terms properly" do
+    XapitMember.xapit { |i| i.field :name }
+    bar = XapitMember.new(:name => "foo-bar")
+    baz = XapitMember.new(:name => "foo-baz")
+    zap = XapitMember.new(:name => "foo-zap")
+    Xapit.index_all
+    XapitMember.search(:conditions => { :name => "foo-b*"}).should == [bar, baz]
+  end
 end
